2007-10-30 Jeff Garrett <jeff@jgarrett.org>

	* src/import_tiger.c: Allow remote URIs in import_tiger_from_uri

2007-09-09 Jeff Garrett <jeff@jgarrett.org>

	* src/main.c: Fix typo in database configuration file parse

2007-09-08 Jeff Garrett <jeff@jgarrett.org>

	* src/downloadmanager.c:
	* src/locationeditwindow.c:
	* src/locationset.h:
	* src/mainwindow.c:
	* src/mapinfowindow.c:
	* src/scenemanager.c:
	* src/tooltipwindow.c: Do not use __unused as it may be reserved

2007-09-08 Jeff Garrett <jeff@jgarrett.org>

	* src/mainwindow.c: Update website URL to point to the cairo wiki

2007-09-08 Jeff Garrett <jeff@jgarrett.org>

	* src/import.c: Check TIGER filenames have the correct case

2007-09-08 Jeff Garrett <jeff@jgarrett.org>

	* src/import_tiger.c: Use places instead of primary county subdivisions

2007-09-08 Jeff Garrett <jeff@jgarrett.org>

	* src/location.c:
	* src/locationset.c: Remove (deprecated) GMemChunk

2007-09-08 Jeff Garrett <jeff@jgarrett.org>

	* src/main.c: Add configuration for external MySQL server
	* configure.ac:
	* src/db.c: Remove MySQL embedded server

2005-10-26  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/*: Fix all compiler warnings that showed up after adding -Wall.

2005-10-26  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/road.c:
	* src/road.h: Remove hardcoded road suffix list.

2005-10-26  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/road.c:
	* src/util.c:
	* data/road-suffix-list.txt: Moved list of road suffixes to data file.

2005-10-25  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/map.c: Switch from gfreelist to g_new and g_free for the list of selected POI (currently not really used).
	* src/gfreelist.h:
	* src/gfreelist.c: Removed.

2005-10-20  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* roadster.spec: Added RPM .spec file contributed by Ofer Achler.