@@ -14,11 +14,15 @@ desktop_DATA = $(DESKTOP_FILES)
 styledir = $(pkgdatadir)
 style_DATA = layers.xml
 
+tigerdir = $(pkgdatadir)
+tiger_DATA = tiger-states.txt
+
 install-data-local:
 
 EXTRA_DIST =				\
 	$(glade_DATA)			\
 	$(style_DATA)			\
+	$(tiger_DATA)			\
 	$(DESKTOP_IN_FILES)		\
 	$(NULL)
 
